Clean up active link, demonstrate active link on page, and fix offset jumps

--- a/docs/scss/layout.scss
+++ b/docs/scss/layout.scss
@@ -2,5 +2,10 @@ body {
     background-color: $gray;
 }
 
+.highlight h3 {
+    background: $yellow;
+    transition: background .5s;
+}
+
 $sidebar-breakpoint: 1000px;
 $table-breakpoint: 768px;
